tests/ui/invalid_extend_variable_sized.stderr
error[E0277]: the class layout is not valid
 --> tests/ui/invalid_extend_variable_sized.rs:4:1
  |
4 | #[pyclass(extends=PyType)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required for `#[pyclass(extends=...)]`
  |
  = help: the trait `pyo3::pycell::impl_::InternalPyClassObjectLayout<MyClass>` is not implemented for `PyVariableClassObject<MyClass>`
  = note: the python version being built against influences which layouts are valid
  = help: the trait `pyo3::pycell::impl_::InternalPyClassObjectLayout<T>` is implemented for `PyStaticClassObject<T>`
note: required by a bound in `PyClassImpl::Layout`
 --> src/impl_/pyclass.rs
  |
  |     type Layout: InternalPyClassObjectLayout<Self>;
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::Layout`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
